2004-08-06 Chris Wiebe

	Add scheduling rule to WorkbenchRunnableAdapter
	* src/org/eclipse/cdt/internal/ui/actions/WorkbenchRunnableAdapter.java

2004-08-06 Chris Wiebe

	Added new element wizard classes.
	* src/org/eclipse/cdt/internal/ui/wizards/NewElementWizard.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewElementWizardPage.java
	
2004-08-04 Alain Magloire

	Provide filters for the Outliner.

	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java
	* src/org/eclipse/cdt/internal/ui/filters/MacroDirectiveFilter.java
	* src/org/eclipse/cdt/internal/ui/filters/UsingDirectiveFilter.java
	* plugin.properties
	* plugin.xml

2004-08-04 Alain Magloire

	Fix ShowInCView class
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/ui/CElementGrouping.java
	* src/org/eclipse/cdt/ui/Includes/Grouping.java
	* src/org/eclipse/cdt/ui/actions/ShowInCViewAction.java

2004-08-04 Alain Magloire

	Implementation of Grouping for includes.
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/cview/CView.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java
	* src/org/eclipse/cdt/internal/ui/cview/LibraryRefContainer.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/preferences/AppearancePreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/CPluginPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/ui/CElementGrouping.java
	* src/org/eclipse/cdt/ui/CElementSorter.java
	* src/org/eclipse/cdt/ui/IncludesGrouping.java
	* src/org/eclipse/cdt/ui/PreferenceConstants.java

2004-08-03 Tanya Wolff

	Fix for 71033: English "Find Refs" in Workbench Key preferences.
	*plugin.properties
	*plugin.xml
	