@@ -1,3 +1,7 @@
+2004-08-10 Alain Magloire
+
+	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
+
 2004-08-06 Chris Wiebe
 
 	Add scheduling rule to WorkbenchRunnableAdapter
